<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/usuarios"
            android:title="@string/usuario" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/clientes"
            android:title="@string/title_activity_cliente" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/productos"
            android:title="@string/title_activity_producto" />
        <item
            android:id="@+id/nav_proveedor"
            android:icon="@drawable/proveedor"
            android:title="@string/title_activity_proveedor" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ubicacion"
            android:title="@string/title_activity_localizacion" />
        <item
            android:id="@+id/nav_facturacion"
            android:icon="@drawable/factura"
            android:title="@string/title_activity_facturacion" />
        <item
            android:id="@+id/nav_unidadmedida"
            android:icon="@drawable/unidad"
            android:title="@string/title_activity_unidad" />
        <item
            android:id="@+id/nav_configdb"
            android:icon="@drawable/basededatos"
            android:title="@string/configdb" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>